[project]
name = "optical-group-5"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "laspy>=2.5.3",
    "numpy>=1.26.4",
    "matplotlib>=3.9.0",
    "xarray>=2024.5.0",
    "geopandas>=0.14.4",
    "rasterio>=1.3.10",
    "scipy>=1.13.0",
    "rioxarray>=0.15.5",
    "ipython>=8.24.0",
    "ipykernel>=6.29.4",
    "lazrs>=0.6.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/optical_group_5"]
